--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-leancloud==2.9.9
-Markdown==3.3.4
-matplotlib==3.5.1
-numpy==1.20.3
-openpyxl==3.0.9
-pdfkit==0.6.1
-PySimpleGUI==4.57.0
-pywin32==301
-requests==2.26.0
-win10toast==0.9
+leancloud
+Markdown
+matplotlib
+numpy
+openpyxl
+pdfkit
+PySimpleGUI
+pywin32
+requests
+windows_toasts
